Backlog #8-#21 殘留變更 + E2E 截圖清理
Attendance (#19-#20):
- 輪班排程 Value Objects (RotationPatternId, ScheduleId, SwapRequestId)
- UpdateLeaveTypeServiceImpl 修正
- AbsentDetectionDomainService 彈性遲到判斷
- AttendanceApiContractTest 合約測試 + attendance_contracts.md 補充

IAM (#9):
- LdapAuthenticationDomainService LDAP 認證
- schema-test.sql / iam_base_data.sql 測試資料 + iam_contracts.md 補充

Payroll (#21):
- AdvanceId / DeductionId Value Objects
- PayrollApiContractTest 合約測試 + payroll_contracts.md 補充

Insurance / Recruitment / Timesheet:
- 測試資料修正 + 合約測試清理

清理: 刪除 E2E 驗證截圖 (已確認通過)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>